testing dot for pathes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <body>
     <header>
-      <img src="/images/homepageheader.png" alt="Home Page Header" class="header">
+      <img src="./images/homepageheader.png" alt="Home Page Header" class="header">
         <h1>Welcome to TeaHaus Café!</h1>
-      <img src="/images/profilephoto.png" alt="Profile Photo" class="profilephoto">
+      <img src="./images/profilephoto.png" alt="Profile Photo" class="profilephoto">
     </header>
     <br><br>
     <h3>Pick Your Flavor!</h3>
