--- a/index.html
+++ b/index.html
@@ -20,79 +20,79 @@
     <h4>Current Flavors</h4> 
 
       <div class="galleryAlters">
-        <a href="/alterpages/anahome.html">
-          <img src="/images/ana.png" alt="Ana">
+        <a href="./alterpages/anahome.html">
+          <img src="./images/ana.png" alt="Ana">
         </a>
         <div class="alterDesc">Ana</div>
         </div>
       
       <div class="galleryAlters">
-        <a href="/alterpages/bernie.html">
-          <img src="/images/bernie.png" alt="Bernie">
+        <a href="./alterpages/bernie.html">
+          <img src="./images/bernie.png" alt="Bernie">
         </a>
         <div class="alterDesc">Bernie</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/bughome.html">
-          <img src="/images/bug.png" alt="Bug">
+        <a href="./alterpages/bughome.html">
+          <img src="./images/bug.png" alt="Bug">
         </a>
         <div class="alterDesc">Bug</div>
         </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/everesthome.html">
-          <img src="/images/everest.png" alt="Everest">
+        <a href="./alterpages/everesthome.html">
+          <img src="./images/everest.png" alt="Everest">
         </a>
         <div class="alterDesc">Everest</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/hanzohome.html">
-          <img src="/images/hanzo.png" alt="Hanzo">
+        <a href="./alterpages/hanzohome.html">
+          <img src="./images/hanzo.png" alt="Hanzo">
         </a>
         <div class="alterDesc">Hanzo</div>
       </div>
     
     <h4>Seasonal Flavors</h4>
       <div class="galleryAlters">
-        <a href="/alterpages/juntahome.html">
-          <img src="/images/junta.png" alt="Junta">
+        <a href="./alterpages/juntahome.html">
+          <img src="/.images/junta.png" alt="Junta">
         </a>
         <div class="alterDesc">Teshima</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/levihome.html">
-          <img src="/images/levi.png" alt="Levi">
+        <a href="./alterpages/levihome.html">
+          <img src="./images/levi.png" alt="Levi">
         </a>
         <div class="alterDesc">Levi</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/lighthome.html">
-          <img src="/images/light.png" alt="Light">
+        <a href="./alterpages/lighthome.html">
+          <img src="./images/light.png" alt="Light">
         </a>
         <div class="alterDesc">Light</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/qrowhome.html">
-          <img src="/images/qrow.png" alt="Qrow">
+        <a href="./alterpages/qrowhome.html">
+          <img src="./images/qrow.png" alt="Qrow">
         </a>
         <div class="alterDesc">Qrow</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/samhome.html">
-          <img src="/images/sam.png" alt="Sam">
+        <a href="./alterpages/samhome.html">
+          <img src="./images/sam.png" alt="Sam">
         </a>
         <div class="alterDesc">Sam</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="/alterpages/sparkhome.html">
-          <img src="/images/spark.png" alt="Spark">
+        <a href="./alterpages/sparkhome.html">
+          <img src="./images/spark.png" alt="Spark">
         </a>
         <div class="alterDesc">Spark</div>
       </div>
