--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h4>Seasonal Flavors</h4>
       <div class="galleryAlters">
         <a href="./alterpages/juntahome.html">
-          <img src=".images/junta.png" alt="Junta">
+          <img src="./images/junta.png" alt="Junta">
         </a>
         <div class="alterDesc">Teshima</div>
       </div>
