--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <metadata name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
-  <body>
+  <body class="errorText">
     <h1>404 Error</h1>
     <h4>Page Not Found</h4>
     <p class="errorText">The page you are looking for may be under construction. We thank you for you patience.</p>
