--- a/alterpages/bernie.html
+++ b/alterpages/bernie.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Bernie's Nook</title>
     <link rel="stylesheet" src="bernie.css">
-    <link rel="stylesheet" src="https://fonts.googleapis.com/css2?family=Comic+Nue">
-    <!-- add FontAwesome stylesheet here -->
-    <meta charaset="utf-8">
+    <link rel="stylesheet" src="https://fonts.googleapis.com/css?family=Comic+Nue">
+    <script src="https://kit.fontawesome.com/81092ce016.js" crossorigin="anonymous"></script>
+    <metadata name="viewport" content="width=device-width, initial-scale=1.0">
+    <metadata charaset="utf-8">
   </head>
+
+  <body>
+    <header>
+      <!-- add header image or text here -->
+    </header>
+
+    <main>
+      <h1>Welcome to Bernie's Nook</h1>
+      <h3>A Queer Little Corner of the Internet</h3>
+      <!-- add some content here, like an about me section, philosophy section, etc. add place to gush about ESA-->
+    </main>
+
+    <footer>
+      <!-- decide what to add as footer text. possibly rainbow mixer gif? -->
+    </footer>
+    
+  </body>
+  
 </html>
