--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h4>Current Flavors</h4> 
 
       <div class="galleryAlters">
-        <a href="./alterpages/anahome.html">
+        <a href="./alterpages/ana.html">
           <img src="./images/ana.png" alt="Ana">
         </a>
         <div class="alterDesc">Ana</div>
@@ -34,21 +34,21 @@
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/bughome.html">
+        <a href="./alterpages/bug.html">
           <img src="./images/bug.png" alt="Bug">
         </a>
         <div class="alterDesc">Bug</div>
         </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/everesthome.html">
+        <a href="./alterpages/everest.html">
           <img src="./images/everest.png" alt="Everest">
         </a>
         <div class="alterDesc">Everest</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/hanzohome.html">
+        <a href="./alterpages/hanzo.html">
           <img src="./images/hanzo.png" alt="Hanzo">
         </a>
         <div class="alterDesc">Hanzo</div>
@@ -56,42 +56,42 @@
     
     <h4>Seasonal Flavors</h4>
       <div class="galleryAlters">
-        <a href="./alterpages/juntahome.html">
+        <a href="./alterpages/junta.html">
           <img src="./images/junta.png" alt="Junta">
         </a>
         <div class="alterDesc">Teshima</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/levihome.html">
+        <a href="./alterpages/levi.html">
           <img src="./images/levi.png" alt="Levi">
         </a>
         <div class="alterDesc">Levi</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/lighthome.html">
+        <a href="./alterpages/light.html">
           <img src="./images/light.png" alt="Light">
         </a>
         <div class="alterDesc">Light</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/qrowhome.html">
+        <a href="./alterpages/qrow.html">
           <img src="./images/qrow.png" alt="Qrow">
         </a>
         <div class="alterDesc">Qrow</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/samhome.html">
+        <a href="./alterpages/sam.html">
           <img src="./images/sam.png" alt="Sam">
         </a>
         <div class="alterDesc">Sam</div>
       </div>
 
       <div class="galleryAlters">
-        <a href="./alterpages/sparkhome.html">
+        <a href="./alterpages/spark.html">
           <img src="./images/spark.png" alt="Spark">
         </a>
         <div class="alterDesc">Spark</div>
