--- a/alterpages/bernie.html
+++ b/alterpages/bernie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Bernie's Nook</title>
     <link rel="stylesheet" src="bernie.css">
@@ -15,8 +15,6 @@
     </header>
 
     <main>
-      <h1>Welcome to Bernie's Nook</h1>
-      <h3>A Queer Little Corner of the Internet</h3>
       <!-- add some content here, like an about me section, philosophy section, etc. add place to gush about ESA-->
     </main>
 
