--- a/alterpages/everest.html
+++ b/alterpages/everest.html
@@ -25,32 +25,32 @@
     <div class="columns">
       
       <div class="desktopIcons">
-        <img src="./alterimages/computer.ico" alt="computer icon" class="appIcon">
+        <img src="./everestimages/computer.ico" alt="computer icon" class="appIcon">
           <p class="appText">My Computer</p>
         <br>
-        <img src="./alterimages/recyclebin.ico"  alt="recycle bin icon" class="appIcon">
+        <img src="./everestimages/recyclebin.ico"  alt="recycle bin icon" class="appIcon">
           <p class="appText">Recycle Bin</p>
         <br>
-        <img src="./alterimages/folder.ico" alt="folder icon" class="appIcon">
+        <img src="./everestimages/folder.ico" alt="folder icon" class="appIcon">
           <p class="appText">Documents</p>
         <br>
-        <img src="./alterimages/neighborhoodnetwork.ico" alt="neighborhood network icon" class="appIcon">
+        <img src="./everestimages/neighborhoodnetwork.ico" alt="neighborhood network icon" class="appIcon">
           <p class="appText">Network</p>
         <br>
-        <img src="./alterimages/theinternet.ico" alt="internet icon" class="appIcon">
+        <img src="./everestimages/theinternet.ico" alt="internet icon" class="appIcon">
           <p class="appText">The Internet</p>
-        <img src="./alterimages/microsoftnetwork.ico" alt="microsoft network" class="appIcon">
+        <img src="./everestimages/microsoftnetwork.ico" alt="microsoft network" class="appIcon">
           <p class="appText">Set Up The <br> Microsoft <br> Network</p>
-        <a href="https://overwatch.blizzard.com/en-us/career/d956b987b164b2aeecbd26a2d701%7Cea7e51115b48d7a9cd22e0eb6558f36c/"><img src="./alterimages/pixeloverwatch.png" alt="Overwatch" class="appIcon"></a>
+        <a href="https://overwatch.blizzard.com/en-us/career/d956b987b164b2aeecbd26a2d701%7Cea7e51115b48d7a9cd22e0eb6558f36c/"><img src="./everestimages/pixeloverwatch.png" alt="Overwatch" class="appIcon"></a>
           <p class="appText">Overwatch</p>
       </div>
 
       <div class="browser">
-        <img src="./alterimages/netscapeheader.png" alt="Netscape header" class="headerImage">
+        <img src="./everestimages/netscapeheader.png" alt="netscape header" class="headerImage">
         <table class="browserHeader">
           <tr>
             <td class="profilePic">
-              <a href="./alterimages/djarneverest.png" target="_blank"><img src="./alterimages/djarneverest.png" alt="Gamer Everest" class="profilePic"></a>
+              <a href="./everestimages/djarneverest.png" target="_blank"><img src="./everestimages/djarneverest.png" alt="Gamer Everest" class="profilePic"></a>
             </td>
             <td class="browserTitles">
               <h1>KhumbuIce</h1>
@@ -66,16 +66,16 @@
       
         <div class="stampColumns">
           <div class="stamp1">
-            <img src="./alterimages/90score.png" alt="90s Core Stamp" class="stamp">
+            <img src="./everestimages/90score.png" alt="90s Core Stamp" class="stamp">
           </div>
           <div class="stamp2">
-            <img src="./alterimages/discorduser.png" alt="Discord User Stamp" class="stamp">
+            <img src="./everestimages/discorduser.png" alt="Discord User Stamp" class="stamp">
           </div>
           <div class="stamp3">
-            <img src="./alterimages/overwatch.png" alt="Overwatch Stamp" class="stamp">
+            <img src="./everestimages/overwatch.png" alt="Overwatch Stamp" class="stamp">
           </div>
           <div class="stamp4">
-            <img src="./alterimages/oldweb.png" alt="Old Web Stamp" class="stamp">
+            <img src="./everestimages/oldweb.png" alt="Old Web Stamp" class="stamp">
           </div>
 
 
@@ -105,7 +105,7 @@
         <div class="footerC1">
           <buton>
             <a href="https://7eahaus.systems">
-              <img src="./alterimages/windows95start.png" alt="start button icon" class="footerIcon">
+              <img src="./everestimages/windows95start.png" alt="start button icon" class="footerIcon">
             </a>
           </buton>
         </div>
